syntax = "proto3";

package com.mmo4j.infrastructure.proto;

option csharp_namespace = "MMO4J.Infrastructure.Proto";
option java_package = "com.mmo4j.infrastructure.proto";

message Command {
    message MovePlayer {
        int64 playerId = 1;
        int32 x = 2;
        int32 y = 3;
    }

    message RetrievePlayerSettings {
        int64 playerId = 1;
    }

    message AuthenticateRequest {
        string username = 1;
        string password = 2;
    }

    message ListRealmsRequest {
    }

    oneof command_oneof {
        MovePlayer movePlayer = 1;
        RetrievePlayerSettings retrievePlayerSettings = 2;
        AuthenticateRequest authenticateRequest = 3;
        ListRealmsRequest listRealmsRequest = 4;
    }
}
